# oneaday

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  go.mod  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: compatibility.yml  quality.yml  release.yml
docs/: ADR-0001-TAURI-PURE-RUST.md  ARCHITECTURE.md  DEVELOPMENT.md  PRODUCT_REQUIREMENTS.md  RELEASING.md  TECH_STACK_RESEARCH.md  VERIFICATION.md
prototype/registry-client/: README.md  index.html
scripts/: build-sidecar.sh  clear-generated-contracts.mjs  compatibility-test.sh  operation-tracker.test.mjs  panel-layout.test.mjs  profile-selection.test.mjs  registry-error.test.mjs  resource-tree.test.mjs  resource-workspace.test.mjs  toast-state.test.mjs  ui-layer-contract.test.mjs  update-settings.test.mjs  updater-contract.test.mjs  verify-generated-contracts.mjs
sidecar/cmd/registry-core/: main.go  main_test.go
src/: App.tsx  ConnectionDialog.tsx  EtcdLeaseDialog.tsx  EtcdTransactionDialog.tsx  HistoryDialog.tsx  MutationDialogs.tsx  NacosHistoryDialog.tsx  NacosNativeDialog.tsx  NativeInfoDialog.tsx  SettingsDialog.tsx  Toast.tsx  TransferDialogs.tsx  UpdateDialog.tsx  ZookeeperNativeDialogs.tsx  connectionAuth.ts  main.tsx  operationTracker.ts  panelLayout.ts  profileSelection.ts  registry.ts  registryError.ts  resourceTree.ts  resourceWorkspaceState.ts  styles.css  toastState.ts  updateSettings.ts  useRegistryOperations.ts  useResourceWorkspace.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  audited_mutation.rs  connections.rs  credentials.rs  diagnostics.rs  lib.rs  main.rs  registry.rs  transfer.rs  updates.rs
src-tauri/src/registry/: adapters.rs  mutations.rs  nacos_native.rs  watch.rs
src-tauri/src/registry/adapters/: nacos_auth.rs
src-tauri/tests/: audit_log.rs  credential_vault.rs  live_registry.rs  registry_catalog.rs
