[package]
name = "atlas-registry"
version = "0.1.0"
description = "A unified registry center desktop client"
edition = "2024"

[lib]
name = "atlas_registry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
etcd-client = { version = "0.19", features = ["tls-roots"] }
nacos-sdk = { version = "0.8", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.14"
zookeeper-client = { version = "0.11.1", features = ["tokio", "tls"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
