[package]
name = "atlas-registry"
version = "0.4.0"
description = "A unified registry center desktop client"
edition = "2024"

[lib]
name = "atlas_registry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
etcd-client = { version = "0.19", features = ["tls-roots"] }
keyring = "4.1"
nacos-sdk = { version = "0.8", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Unify the updater's reqwest 0.13 build with native macOS/Windows proxy discovery.
updater-reqwest = { package = "reqwest", version = "0.13", default-features = false, features = ["system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.14"
zookeeper-client = { version = "0.11.1", features = ["tokio", "tls"] }
zeroize = { version = "1.8", features = ["derive"] }
url = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
ts-rs = { version = "12.0", features = ["no-serde-warnings"] }
